katars/tests/snapshots/snapshots__error_ret_outside_func.snap
---
source: katars/tests/snapshots.rs
expression: output
---
Error: ret outside of function
   ╭─[<test>:1:1]
   │
 1 │ ret 1
   │ ──┬──  
   │   ╰──── ret outside of function
───╯
